修改隐私政策-知识产权

--- a/index.html
+++ b/index.html
@@ -87,7 +87,9 @@
 </p>
 <p>您了解并同意，在收集您的信息后，如果我们将通过技术手段对数据进行去标识化处理，去标识化处理的信息将无法识别您的身份，在此情况下我们有权使用已经去标识化的信息，对用户数据库进行分析并予以商业化的利用。
 </p>
-<p>7、其他用途
+<p>7.1,如果你在生产内容时,或扩散信息时,同意或确保您用的文字信息/图片/视频信息,是完全自己生产的或有所有权的;平台不干预您使用,平台方也不会间接使用您的知识信息,并且以上产生的知识产权纠纷与平台无关,平台默认您使用的知识信息是合法途径获得。
+</p>
+<p>7.2、其他用途
 </p>
 <p>请您注意，如果我们要将您的信息用于本《隐私政策》中未载明的其他用途或额外收集本隐私政策中未提及的您的其他信息，我们会另行事先请您自主同意。一旦您同意，该等额外用途将视为本政策的一部分，该等额外信息也将适用本政策。
 </p>
