--- a/index.html
+++ b/index.html
@@ -129,7 +129,8 @@
 </p>
 <p>12、平台数据积极配合介入国家公安平台,对于用户违法行为,平台方会配合有关机构部门严厉打击;
 </p>
-<p>13、以上条例,当您同意《隐私政策》时，即表示您已同意我们按照本政策处理您的相关信息;
+<p>13,不允许有令人反感的内容或滥用的用户。</p>
+<p>14、以上条例,当您同意《隐私政策》时，即表示您已同意我们按照本政策处理您的相关信息;
 </p>
 <p>二、如何联系我们
 上海水信网络信息科技有限公司，联系地址【上海黄浦区打浦路398弄衡辰商务楼312A】
